# srun-helper-rs

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  build-release
.github/workflows/: rust.yml
src/: encrypt.rs  main.rs
