[package]
name = "srun-helper-rs"
version = "0.1.0"
authors = ["banjiaojuhao <banjiaojuhao@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
base64 = "0.13"
md-5 = "0.9"
sha-1 = "0.9"
hex = "0.4"
