[package]
name = "srun-helper-rs"
version = "0.1.0"
authors = ["banjiaojuhao <banjiaojuhao@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl-sys/vendored"]

[dependencies]
serde_json = "1.0"
chrono = "0.4"
openssl-sys = { version = "0.9", features = ['vendored'] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.13"
md-5 = "0.9"
sha-1 = "0.9"
hex = "0.4"
